Wed Dec 23 14:38:39 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Logger/Logger_Service.cpp:
          Fixed CIAO_TRACE_ENABLE functionality

        * DAnCE/Logger/Logger_Service.cpp:
          Fixed DANCE_TRACE_ENABLE functionality

Wed Dec 23 14:08:39 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Containers/Servant_Activator.cpp:
          Fixed fuzz errors

Wed Dec 23 14:05:39 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/ComponentServer/CIAO_RTComponentServer_Task.cpp:
        * ciao/ComponentServer/Client_init.cpp:
          Fixed fuzz errors

Wed Dec 23 12:39:39 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * CIAO_TAO_DAnCE.mwc:
          Config handlers got moved

        * CIAO_DAnCE.mwc:
          Config handlers got moved, don't generate DAnCE/tests

Wed Dec 23 12:32:39 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * bin/ciao_tests.lst:
          UnkeyedWriter test should be ok now.

Wed Dec 23 12:23:03 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/UnkeyedWriter/Base/Writer_Base.idl:
        * connectors/dds4ccm/tests/UnkeyedWriter/Sender/Writer_Sender.idl:
        * connectors/dds4ccm/tests/UnkeyedWriter/Sender/Writer_Sender_exec.h:
        * connectors/dds4ccm/tests/UnkeyedWriter/Sender/Writer_Sender_exec.cpp:
        * connectors/dds4ccm/tests/UnkeyedWriter/descriptors/Plan.cdp:
          Reworked this test. DDS does not return an error when max_samples is
          reached. Now a large block of data is send.

        * connectors/dds4ccm/tests/UnkeyedWriter/descriptors/USER_QOS_PROFILES.xml:
          Removed this file.

Wed Dec 23 10:44:14 UTC 2009  Marijke Hengstmengel <mhengstmengel@remedy.nl>

        * connectors/dds4ccm/tests/Updater/Sender/Updater_Sender_exec.cpp
          Set 'OK' in debug message when catching the expected InternalError

Wed Dec 23 09:17:14 UTC 2009  Marcel Smit  <msmit@remedy.nl>
