@@ -22,8 +22,8 @@ namespace DAnCE
     ACE_Env_Value<int> log (ACE_TEXT("DANCE_LOG_LEVEL"), DAnCE_debug_level);
     DAnCE_debug_level = log;
 
-    ACE_Env_Value<int> trace (ACE_TEXT("DANCE_TRACE_ENABLE"), false);
-    this->trace_ = (trace != 0);
+    ACE_Env_Value<int> trace (ACE_TEXT("DANCE_TRACE_ENABLE"), this->trace_);
+    this->trace_ = trace;
 
     ACE_Env_Value<const ACE_TCHAR *> filename (ACE_TEXT("DANCE_LOG_FILE"), this->filename_.c_str ());
     this->filename_ = filename;
@@ -46,45 +46,44 @@ namespace DAnCE
   void
   Logger_Service::parse_args (int argc, ACE_TCHAR **argv)
   {
-    const ACE_TCHAR *shortl = ACE_TEXT("-l");
-    const ACE_TCHAR *longl = ACE_TEXT("--log-level");
-    const ACE_TCHAR *tracel = ACE_TEXT("--trace");
-    //    const ACE_TCHAR *traces = "-t";
-    const ACE_TCHAR *lfl = ACE_TEXT("--log-file");
-    const ACE_TCHAR *lfs = ACE_TEXT("-f");
+    DANCE_TRACE ("Logger_Service::parse_args");
 
-    // We need to actually FIND the -l option, as the get_opt won't ignore
-    // the ORB options and such.
-    for (int i = 0; i < argc; ++i)
+    ACE_Get_Opt get_opts (argc,
+                          argv,
+                          "l:tf:",
+                          0,
+                          0,
+                          ACE_Get_Opt::RETURN_IN_ORDER);
+
+    get_opts.long_option (ACE_TEXT("log-level"), 'l', ACE_Get_Opt::ARG_OPTIONAL);
+    get_opts.long_option (ACE_TEXT("trace"), 't', ACE_Get_Opt::ARG_OPTIONAL);
+    get_opts.long_option (ACE_TEXT("log-file"), 'f', ACE_Get_Opt::ARG_OPTIONAL);
+
+    int c;
+    while ( (c = get_opts ()) != -1)
       {
-        if (//ACE_OS::strncmp (argv[i], traces, 2) == 0 ||
-            ACE_OS::strncmp (argv[i], tracel, 7) == 0)
+        switch (c)
           {
-            this->trace_ = true;
-            continue;
-          }
+            case 't':
+              DANCE_DEBUG (9, (LM_TRACE, DLINFO ACE_TEXT("Logger_Service::parse_args - ")
+                            ACE_TEXT("Trace enabled\n"),
+                            get_opts.opt_arg ()));
+              this->trace_ = true;
+              break;
 
-        if (ACE_OS::strncmp (argv[i], shortl, 2) == 0 ||
-            ACE_OS::strncmp (argv[i], longl, 11 ) == 0)
-          {
-            if ((i + 1) < argc && *argv[i + 1] != '-')
-              {
-                int const level = ACE_OS::atoi (argv[i + 1]);
+            case 'l':
+              DANCE_DEBUG (9, (LM_TRACE, DLINFO ACE_TEXT("Logger_Service::parse_args - ")
+                            ACE_TEXT("Log level set to %C\n"),
+                            get_opts.opt_arg ()));
+              DAnCE_debug_level = ACE_OS::atoi (get_opts.opt_arg ());
+              break;
 
-                if (level != 0)
-                  {
-                    DAnCE_debug_level = level;
-                  }
-              }
-          }
-
-        if (ACE_OS::strncmp (argv[i], lfs, 2) == 0 ||
-            ACE_OS::strncmp (argv[i], lfl, 10 ) == 0)
-          {
-            if ((i + 1) < argc && *argv[i + 1] != '-')
-              {
-                this->filename_ = argv[i+1];
-              }
+            case 'f':
+              DANCE_DEBUG (9, (LM_TRACE, DLINFO ACE_TEXT("Logger_Service::parse_args - ")
+                            ACE_TEXT("Log file set to %C\n"),
+                            get_opts.opt_arg ()));
+              this->filename_ = get_opts.opt_arg ();
+              break;
           }
       }
   }
