@@ -46,8 +46,6 @@ $cdp_file = "Plan.cdp";
 
 $ENV{"DANCE_TRACE_ENABLE"} = 0;
 $ENV{"CIAO_TRACE_ENABLE"} = 0;
-$ENV{"CIAO_LOG_LEVEL"} = 5;
-$ENV{"DANCE_LOG_LEVEL"} = 5;
 
 sub create_targets {
     #   naming service
